# iganet-template

./: CMakeLists.txt  README.md
.circleci/: config.yml
.github/workflows/: cmake-multi-platform.yml  gitlab-sync.yml
src/: helloworld.cxx
